--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tippyjs/react": "^4.2.6",
     "@types/lodash": "^4.17.17",
     "axios": "^1.9.0",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
